--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,7 @@
 
     </div>
     <div class="footer__copyright">
-        <small>Copyright &copy; EDU-PRO 2023</small>
+        <small>Copyright &copy; EDU-PRO Mitali Jain 2023</small>
     </div>
 </footer>
 
