--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <!-- =============end of categories============== -->
 
 <section class="courses">
-    <h2>Our Popular Courses</h2>
+    <h2 id="categories__h2">Our Popular Courses</h2>
     <div class="container courses__container">
         <article class="course">
             <div class="course__image">
