--- a/index.html
+++ b/index.html
@@ -60,32 +60,32 @@
                 </div>
                 <div class="categories__right">
                     <article class="category">
-                        <span class="category__icon"><i class="fa-brands fa-bitcoin" style="color: #356fd4;"></i></span>
+                        <span class="category__icon"><i class="fa-solid fa-bitcoin-sign" style="color: white;"></i></span>
                         <h5>Blockchain</h5>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, suscipit?</p>
                     </article>
                     <article class="category">
-                        <span class="category__icon"><i class="fa-solid fa-business-time" style="color: #356fd4"></i></span>
+                        <span class="category__icon"><i class="fa-solid fa-business-time" style="color: white"></i></span>
                         <h5>Business</h5>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, qui.</p>
                     </article>
                     <article class="category">
-                        <span class="category__icon"><i class="fa-solid fa-palette" style="color: #356fd4;"></i></span>
+                        <span class="category__icon"><i class="fa-solid fa-palette" style="color: white;"></i></span>
                         <h5>Graphic Design</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, odit!</p>
                     </article>
                     <article class="category">
-                        <span class="category__icon"><i class="fa-duotone fa-indian-rupee-sign" style="--fa-primary-color: #356fd4; --fa-secondary-color: #2b74f3;"></i></span>
+                        <span class="category__icon"><i class="fa-solid fa-dollar-sign" style="color: white;"></i></span>
                         <h5>Finance</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, eveniet.</p>
                     </article>
                     <article class="category">
-                        <span class="category__icon"><i class="fa-solid fa-bullhorn" style="color: #356fd4;"></i></span>
+                        <span class="category__icon"><i class="fa-solid fa-bullhorn" style="color: white;"></i></span>
                         <h5>Marketing</h5>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae, tempore.</p>
                     </article>
                     <article class="category">
-                        <span class="category__icon"><i class="fa-regular fa-music" style="color: #356fd4"></i></span>
+                        <span class="category__icon"><i class="fa-solid fa-music" style="color: white;"></i></span>
                         <h5>Music</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, debitis.</p>
                     </article>
@@ -367,16 +367,16 @@
             </div>
             <ul class="footer__socials">
                 <li>
-                    <a href="#"><i class="fa-brands fa-facebook" style="color: #7889a5;"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook" style="color: white;"></i></a>
                 </li>
                 <li>
-                    <a href="#"><i class="fa-brands fa-instagram" style="color: #6a707c;"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram" style="color: palevioletred;"></i></a>
                 </li>
                 <li>
                     <a href="#"><i class="fa-brands fa-twitter" style="color: #1c5bca;"></i></a>
                 </li>
                 <li>
-                    <a href="#"><i class="fa-brands fa-linkedin" style="color: #1f5bc1;"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin" style="color: white;"></i></a>
                 </li>
             </ul>
         </div>
