--- a/contact.html
+++ b/contact.html
@@ -89,21 +89,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <footer class="footer">
     <div class="container footer__container">
         <div class="footer__1">
@@ -140,19 +125,20 @@
             </div>
             <ul class="footer__socials">
                 <li>
-                    <a href="#"><i class="fa-brands fa-facebook" style="color: #7889a5;"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook" style="color: white;"></i></a>
                 </li>
                 <li>
-                    <a href="#"><i class="fa-brands fa-instagram" style="color: #6a707c;"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram" style="color: palevioletred;"></i></a>
                 </li>
                 <li>
                     <a href="#"><i class="fa-brands fa-twitter" style="color: #1c5bca;"></i></a>
                 </li>
                 <li>
-                    <a href="#"><i class="fa-brands fa-linkedin" style="color: #1f5bc1;"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin" style="color: white;"></i></a>
                 </li>
             </ul>
         </div>
+
 
     </div>
     <div class="footer__copyright">
